Merge all peoples